force-app/main/default/objects/CareService__c/fields/MYLV_Care_Status__c.field-meta.xml
<CustomField>
    <fullName>MYLV_Care_Status__c</fullName>
    <inlineHelpText>Client Status in LV APP</inlineHelpText>
    <label>MYLV Care Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dropped_in_store</fullName>
                <label>Dropped in Store</label>
            </value>
            <value>
                <fullName>routing_to_workshop</fullName>
                <label>Routing to Workshop</label>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Restoration</fullName>
            </value>
            <value>
                <fullName>ready_for_pick_up</fullName>
                <label>Ready for pick-up in store</label>
            </value>
            <value>
                <fullName>restoration_not_performed</fullName>
                <label>Restoration not performed</label>
            </value>
            <value>
                <fullName>home_delivery</fullName>
                <label>Home delivery</label>
            </value>
            <value>
                <fullName>dropped_in_store_s</fullName>
                <label>Dropped in Store s</label>
            </value>
            <value>
                <fullName>ready_for_pick_up_s</fullName>
                <label>Ready for Pickup s</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>request_submitted</fullName>
                <label>Request submitted</label>
            </value>
            <value>
                <fullName>preliminary_assessment</fullName>
                <label>Preliminary assessment</label>
            </value>
            <value>
                <fullName>shipping_to_atelier</fullName>
                <label>Shipping to atelier</label>
            </value>
            <value>
                <fullName>received_at_atelier</fullName>
                <label>Received at the atelier</label>
            </value>
            <value>
                <fullName>under_assessment</fullName>
                <label>Under assessment</label>
            </value>
            <value>
                <fullName>repair_in_progress</fullName>
                <label>Repair in progress</label>
            </value>
            <value>
                <fullName>awaiting_payment</fullName>
                <label>Awaiting payment</label>
            </value>
            <value>
                <fullName>payment_confirmed</fullName>
                <label>Payment confirmed</label>
            </value>
            <value>
                <fullName>shipping</fullName>
                <label>Shipping</label>
            </value>
            <value>
                <fullName>delivered_to_client</fullName>
                <label>Delivered to client</label>
            </value>
            <value>
                <fullName>preliminary_assessment_acc</fullName>
                <label>Preliminary assessment accepted</label>
            </value>
            <value>
                <fullName>preliminary_assessment_dec</fullName>
                <label>Preliminary assessment declined</label>
            </value>
            <value>
                <fullName>final_assessment_acc</fullName>
                <label>Final assessment accepted</label>
            </value>
            <value>
                <fullName>final_assessment_dec</fullName>
                <label>Final assessment declined</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>payment_initiated</fullName>
                <label>Payment initiated</label>
            </value>
            <value>
                <fullName>payment_contact</fullName>
                <label>Payment contact</label>
            </value>
            <value>
                <fullName>confirm_address</fullName>
                <label>Confirm address</label>
            </value>
            <value>
                <fullName>shipping_in_preparation</fullName>
                <label>Shipping in preparation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>