force-app/main/default/objects/CareService__c/fields/MyRepair_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>MyRepair_CreatedDate__c</fullName>
    <label>MyRepair Created Date</label>
    <type>Date</type>
</CustomField>