force-app/main/default/objects/CareService__c/fields/MyRepair_Error__c.field-meta.xml
<CustomField>
    <fullName>MyRepair_Error__c</fullName>
    <label>MyRepair Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>