force-app/main/default/objects/CareService__c/fields/MyRepair_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>MyRepair_Response_Body__c</fullName>
    <label>MyRepair Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>