force-app/main/default/objects/CareService__c/fields/MyRepairStatus__c.field-meta.xml
<CustomField>
    <fullName>MyRepairStatus__c</fullName>
    <label>My Repair Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>createdInStore</fullName>
                <label>Created in store</label>
            </value>
            <value>
                <fullName>pendingQualityExpertise</fullName>
                <label>Pending quality expertise</label>
            </value>
            <value>
                <fullName>shippedToRepairCenter</fullName>
                <label>Shipped to repair center</label>
            </value>
            <value>
                <fullName>shippedToLocalPartner</fullName>
                <label>Shipped to Local Partner</label>
            </value>
            <value>
                <fullName>orderPendingValidation</fullName>
                <label>Order pending validation</label>
            </value>
            <value>
                <fullName>waitingForClientDecision</fullName>
                <label>Waiting for client decision</label>
            </value>
            <value>
                <fullName>orderAccepted</fullName>
                <label>Order accepted</label>
            </value>
            <value>
                <fullName>orderRejected</fullName>
                <label>Order rejected</label>
            </value>
            <value>
                <fullName>waitingForSpareParts</fullName>
                <label>Waiting for spare parts</label>
            </value>
            <value>
                <fullName>repairInProgress</fullName>
                <label>Repair in progress</label>
            </value>
            <value>
                <fullName>shippedToStore</fullName>
                <label>Repair finalized</label>
            </value>
            <value>
                <fullName>clientContacted</fullName>
                <label>Client contacted</label>
            </value>
            <value>
                <fullName>paymentConfirmed</fullName>
                <label>Payment confirmed</label>
            </value>
            <value>
                <fullName>productDeliveredToClient</fullName>
                <label>Product delivered to client</label>
            </value>
            <value>
                <fullName>servicePerformed</fullName>
                <label>Service performed</label>
            </value>
            <value>
                <fullName>expertisePerformedInRepairCenter</fullName>
                <label>Expertise performed in repair center</label>
            </value>
            <value>
                <fullName>receivedAndAcceptedInStore</fullName>
                <label>Received and accepted in store</label>
            </value>
            <value>
                <fullName>receivedAndNotAcceptedInStore</fullName>
                <label>Received and not accepted in store</label>
            </value>
            <value>
                <fullName>productStocked</fullName>
                <label>Product stocked</label>
            </value>
            <value>
                <fullName>sentToRMS</fullName>
                <label>Sent to RMS</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>initial</fullName>
                <label>Initial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>