force-app/main/default/objects/CareService__c/fields/NS_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Code__c</fullName>
    <inlineHelpText>Reason of non-reparability</inlineHelpText>
    <label>NS Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>