force-app/main/default/objects/CareService__c/fields/NSCodes_Not_Repaired__c.field-meta.xml
<CustomField>
    <fullName>NSCodes_Not_Repaired__c</fullName>
    <label>NSCodes Not Repaired(deprecated)</label>
    <summaryFilterItems>
        <field>CareServiceLineItem__c.NS_Code__c</field>
        <operation>equals</operation>
        <value>Not repaired</value>
    </summaryFilterItems>
    <summaryForeignKey>CareServiceLineItem__c.CareService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>