force-app/main/default/objects/CareService__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LV App-Appointment Call</fullName>
            </value>
            <value>
                <fullName>LV App-Appointment Video Call</fullName>
            </value>
            <value>
                <fullName>LV App-Form</fullName>
            </value>
            <value>
                <fullName>CSC Call</fullName>
            </value>
            <value>
                <fullName>CSC Email</fullName>
            </value>
            <value>
                <fullName>CSC Messaging</fullName>
            </value>
            <value>
                <fullName>CSC Chat</fullName>
            </value>
            <value>
                <fullName>CSC Clone</fullName>
            </value>
            <value>
                <fullName>Wechat-Appointment Call</fullName>
            </value>
            <value>
                <fullName>Wechat-Appointment Video Call</fullName>
            </value>
            <value>
                <fullName>Wechat-Form</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
                <isActive>false</isActive>
                <label>Appointment</label>
            </value>
            <value>
                <fullName>Chat</fullName>
                <isActive>false</isActive>
                <label>Chat</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>LV App</fullName>
                <isActive>false</isActive>
                <label>LV App</label>
            </value>
            <value>
                <fullName>Messaging</fullName>
                <isActive>false</isActive>
                <label>Messaging</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>