force-app/main/default/objects/CareService__c/fields/Package_Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Package_Declared_Value__c</fullName>
    <inlineHelpText>Search SKU in Product Library to get value or similar SKU can be used if needed, Divide the price by 2</inlineHelpText>
    <label>Package Declared Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>