force-app/main/default/objects/CareService__c/fields/packingListNumber__c.field-meta.xml
<CustomField>
    <fullName>packingListNumber__c</fullName>
    <label>Packing List Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>