force-app/main/default/objects/CareService__c/fields/Parcel_Height__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Height__c</fullName>
    <formula>CASE( Parcel_Size__c ,
&quot;Small size&quot;, 7.62,
&quot;Medium size&quot;,15.24,
&quot;Large size&quot; ,8.89 ,
22.86)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parcel Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>