force-app/main/default/objects/CareService__c/fields/Parcel_Length__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Length__c</fullName>
    <formula>CASE( Parcel_Size__c ,
&quot;Small size&quot;, 27.94,
&quot;Medium size&quot;,45.72,
&quot;Large size&quot; ,48.26 ,
58.42)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parcel Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>