force-app/main/default/objects/CareService__c/fields/Parcel_Size__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Size__c</fullName>
    <inlineHelpText>Small size Box: 11 x 7 x 3 in.     
Medium size Box: 18 x 14 x 6 in.    
Large size Box: 19 x 18 x 3 ½ in.    
Travel size Box: 23 x 17 x 9 in.</inlineHelpText>
    <label>Box Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small size</fullName>
            </value>
            <value>
                <fullName>Medium size</fullName>
            </value>
            <value>
                <fullName>Large size</fullName>
            </value>
            <value>
                <fullName>Travel size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>