force-app/main/default/objects/CareService__c/fields/Parcel_Width__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Width__c</fullName>
    <formula>CASE( Parcel_Size__c ,
&quot;Small size&quot;, 17.78,
&quot;Medium size&quot;,35.56,
&quot;Large size&quot; ,45.72 ,
43.18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parcel Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>