force-app/main/default/objects/CareService__c/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent_Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Care Services</relationshipLabel>
    <relationshipName>Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>