force-app/main/default/objects/CareService__c/fields/Payment_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Error_Count__c</fullName>
    <label>Payment Error Count</label>
    <summaryFilterItems>
        <field>Ixopay_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Ixopay_Transaction__c.Care_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>