force-app/main/default/objects/CareService__c/fields/Payment_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Review_Reason__c</fullName>
    <label>Payment Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old Process</fullName>
            </value>
            <value>
                <fullName>Expired PBL</fullName>
            </value>
            <value>
                <fullName>Refused Payment</fullName>
            </value>
            <value>
                <fullName>Payment Never Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>