force-app/main/default/objects/CareService__c/fields/PBL_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>PBL_Created_Date__c</fullName>
    <label>PBL Created Date</label>
    <type>DateTime</type>
</CustomField>