force-app/main/default/objects/CareService__c/fields/PBL_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PBL_Expiration_Date__c</fullName>
    <formula>PBL_Created_Date__c + 90</formula>
    <label>PBL Expiration Date</label>
    <type>DateTime</type>
</CustomField>