force-app/main/default/objects/CareService__c/fields/PBL_Link__c.field-meta.xml
<CustomField>
    <fullName>PBL_Link__c</fullName>
    <label>PBL Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>