force-app/main/default/objects/CareService__c/fields/PBL_Number__c.field-meta.xml
<CustomField>
    <fullName>PBL_Number__c</fullName>
    <label>PBL Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>