force-app/main/default/objects/CareService__c/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <description>In order to move to ‘Pending Customer Information’ status, a reason needs to be selected</description>
    <label>Pending Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Additional images</fullName>
            </value>
            <value>
                <fullName>Pending Contact Details</fullName>
            </value>
            <value>
                <fullName>Pending Appointment</fullName>
            </value>
            <value>
                <fullName>Pending Service confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Technical consultation / escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>