force-app/main/default/objects/CareService__c/fields/Price_Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>Price_Update_Reason__c</fullName>
    <label>Price Update Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>Store Decision</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>FSL (Japan Only)</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>JSL (Japan Only)</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Pro active offer</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Quality issue</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Staff sales repairs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>