force-app/main/default/objects/CareService__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IF( High_Priority__c , IMAGE(&quot;/resource/iconics/images/priority.png&quot;, &quot;High Priority&quot;,35,30) , &quot;&quot;)</formula>
    <label>High Priority Flag</label>
    <type>Text</type>
</CustomField>