force-app/main/default/objects/CareService__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Care Services</relationshipLabel>
    <relationshipName>Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>