force-app/main/default/objects/CareService__c/fields/Product_Sku_unknown__c.field-meta.xml
<CustomField>
    <fullName>Product_Sku_unknown__c</fullName>
    <label>Product Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>