force-app/main/default/objects/CareService__c/fields/Quotation_Count__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Count__c</fullName>
    <label>Quotation Count</label>
    <summaryForeignKey>CareServiceLineItem__c.CareService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>