force-app/main/default/objects/CareService__c/fields/Quotation_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Quotation_expiration_date__c</fullName>
    <formula>Quotation_sent_date__c  +28</formula>
    <label>Quotation expiration date</label>
    <type>Date</type>
</CustomField>