force-app/main/default/objects/CareService__c/fields/Quotation_sent_date__c.field-meta.xml
<CustomField>
    <fullName>Quotation_sent_date__c</fullName>
    <label>Quotation sent date</label>
    <type>Date</type>
</CustomField>