force-app/main/default/objects/CareService__c/fields/Receipt_Base64_code__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Base64_code__c</fullName>
    <label>Receipt Base64 code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>