force-app/main/default/objects/CareService__c/fields/Receipt_filename__c.field-meta.xml
<CustomField>
    <fullName>Receipt_filename__c</fullName>
    <label>Receipt filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>