force-app/main/default/objects/CareService__c/fields/Red_Code__c.field-meta.xml
<CustomField>
    <fullName>Red_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Code</label>
    <type>Checkbox</type>
</CustomField>