force-app/main/default/objects/CareService__c/fields/Repair_Center_Comments__c.field-meta.xml
<CustomField>
    <fullName>Repair_Center_Comments__c</fullName>
    <label>Repair Center Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>