force-app/main/default/objects/CareService__c/fields/RepairInProgressDayFlag__c.field-meta.xml
<CustomField>
    <fullName>RepairInProgressDayFlag__c</fullName>
    <description>Flag that count how much days the status eas on &apos;Repair in progress&apos;. this field can be 45, 90,135, 180</description>
    <label>RepairInProgressDayFlag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>