force-app/main/default/objects/CareService__c/fields/reporting_closed_actions__c.field-meta.xml
<CustomField>
    <fullName>reporting_closed_actions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>reporting_closed_actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>