force-app/main/default/objects/CareService__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>IF(
!ISBLANK(Shipping_Address_Line_1__c),
Shipping_Address_Line_1__c &amp; BR(),
&quot;&quot;)
&amp;
IF(
!ISBLANK(Shipping_Address_Line_2__c),
Shipping_Address_Line_2__c &amp; BR(),
&quot;&quot;)
&amp;
IF(
!ISBLANK(Shipping_Address_Line_3__c),
Shipping_Address_Line_3__c &amp; BR(),
&quot;&quot;)
&amp;
IF(
(!ISBLANK(Shipping_City__c)&amp;&amp; !ISBLANK(Shipping_Zip_Postal_Code__c)),
Shipping_City__c &amp;&quot;, &quot; &amp; Shipping_Zip_Postal_Code__c &amp; BR(),
IF(
(ISBLANK(Shipping_City__c)&amp;&amp; !ISBLANK(Shipping_Zip_Postal_Code__c)) ,
Shipping_Zip_Postal_Code__c &amp; BR(),
IF(
(!ISBLANK(Shipping_City__c)&amp;&amp; ISBLANK(Shipping_Zip_Postal_Code__c)) ,
Shipping_City__c &amp; BR(),
&quot;&quot;)))
&amp;
IF(
!ISBLANK(Shipping_State_Province__c),
Shipping_State_Province__c &amp; BR(),
&quot;&quot;)</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>