force-app/main/default/objects/CareService__c/fields/Shipping_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Id__c</fullName>
    <description>Shipping Address Description</description>
    <label>Shipping Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>