force-app/main/default/objects/CareService__c/fields/Shipping_Address_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>