force-app/main/default/objects/CareService__c/fields/Shipping_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Line_3__c</fullName>
    <label>Shipping Address Line 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>