force-app/main/default/objects/CareService__c/fields/Shipping_Address_Title__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>