force-app/main/default/objects/CareService__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <label>Shipping Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_ISO_2</valueSetName>
    </valueSet>
</CustomField>