force-app/main/default/objects/CareService__c/fields/Shipping_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_delivery_date__c</fullName>
    <label>Shipping delivery date</label>
    <type>Date</type>
</CustomField>