force-app/main/default/objects/CareService__c/fields/Shipping_Label_Base64_code_suite__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_Base64_code_suite__c</fullName>
    <label>Shipping Label Base64 code suite</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>