force-app/main/default/objects/CareService__c/fields/Shipping_Label_creation_date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_creation_date__c</fullName>
    <label>Shipping Label creation date</label>
    <type>Date</type>
</CustomField>