force-app/main/default/objects/CareService__c/fields/Shipping_label_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_label_expiration_date__c</fullName>
    <formula>Shipping_Label_creation_date__c  + 109</formula>
    <label>Shipping label expiration date</label>
    <type>Date</type>
</CustomField>