force-app/main/default/objects/CareService__c/fields/Shipping_Label_filename__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_filename__c</fullName>
    <label>Shipping Label filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>