force-app/main/default/objects/CareService__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <defaultValue>&quot;M99999&quot;</defaultValue>
    <label>SKU</label>
    <length>6</length>
    <type>Text</type>
</CustomField>