force-app/main/default/objects/CareService__c/fields/Spare_Part_Order__c.field-meta.xml
<CustomField>
    <fullName>Spare_Part_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Spare part order only</inlineHelpText>
    <label>Spare Part Order Only</label>
    <type>Checkbox</type>
</CustomField>