force-app/main/default/objects/CareService__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Care Services</relationshipLabel>
    <relationshipName>Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>