force-app/main/default/objects/CareService__c/fields/Store_Comment__c.field-meta.xml
<CustomField>
    <fullName>Store_Comment__c</fullName>
    <label>Store Comment</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>