force-app/main/default/objects/CareService__c/fields/StoreRetailCode__c.field-meta.xml
<CustomField>
    <fullName>StoreRetailCode__c</fullName>
    <label>StoreRetailCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>