force-app/main/default/objects/CareService__c/fields/TechStoreRetailCode__c.field-meta.xml
<CustomField>
    <fullName>TechStoreRetailCode__c</fullName>
    <label>Store Retail Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UE4</fullName>
            </value>
            <value>
                <fullName>F92</fullName>
            </value>
            <value>
                <fullName>J91</fullName>
            </value>
            <value>
                <fullName>NY7</fullName>
            </value>
            <value>
                <fullName>L48</fullName>
            </value>
            <value>
                <fullName>H91</fullName>
            </value>
            <value>
                <fullName>K91</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>