force-app/main/default/objects/CareService__c/fields/TotalAmount_Updated__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount_Updated__c</fullName>
    <label>Total Amount Updated</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>