force-app/main/default/objects/CareService__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <externalId>true</externalId>
    <label>Repair Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>