force-app/main/default/objects/CareService__c/fields/Type_of_Repair__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Repair__c</fullName>
    <label>Type of Repair</label>
    <length>50</length>
    <type>Text</type>
</CustomField>