force-app/main/default/objects/CareService__c/fields/Unread_email__c.field-meta.xml
<CustomField>
    <fullName>Unread_email__c</fullName>
    <formula>IF ( Has_Unread_Email__c ,IMAGE(&quot;/resource/iconics/images/emailicon.PNG&quot;, &quot;emailIcon&quot;,30,30), &quot; &quot;)</formula>
    <inlineHelpText>You have an unread email</inlineHelpText>
    <label>Unread email</label>
    <type>Text</type>
</CustomField>