force-app/main/default/objects/CareService__c/fields/Updated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Delivery_Date__c</fullName>
    <label>Updated estimated end of repair</label>
    <type>Date</type>
</CustomField>